src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>MSA Opportunities</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Verbal Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Product Opportunities</fullName>
        <description>10K Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Services Opportunities</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client Approval</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Estimation</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <globalPicklist>Account_Tier</globalPicklist>
        <label>Account Tier</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_Formatted__c</fullName>
        <formula>TEXT(MONTH(CloseDate))+&quot;/&quot;+TEXT(DAY(CloseDate))+&quot;/&quot;+TEXT(YEAR(CloseDate))</formula>
        <label>Close Date Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Closed_Through_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Closed Through Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Other__c</fullName>
        <label>Lost Reason - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Internal Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSA_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSA Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agreement__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>MSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSA_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSA Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>MSA Opportunity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Owner_Id__c</fullName>
        <label>Old Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <inlineHelpText>A unique 10 digit code that will be used for Invoicing, and to identify the Project associated with this Opportunity.</inlineHelpText>
        <label>Project Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>QuickBooks Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rate_Card_Name__c</fullName>
        <label>Rate Card Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Price_Book__c</fullName>
        <label>Selected Price Book</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YTD_Checkbox__c</fullName>
        <formula>AND( 
MONTH(CloseDate) &lt;= MONTH(TODAY()), 
DAY(CloseDate) &lt;= DAY(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Delivery_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>notContain</operation>
            <value>doubleclick</value>
        </filters>
        <label>Delivery Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Recently_Closed_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:2</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <label>Recently Closed Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Subscription_Opportunities_CLOSED</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Product_Opportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Subscription Opportunities - CLOSED</label>
    </listViews>
    <listViews>
        <fullName>Subscription_Opportunities_OPEN</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Subscription_Start_Date__c</columns>
        <columns>Subscription_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Product_Opportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Subscription Opportunities - OPEN</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Delivery_Partnership</fullName>
        <active>true</active>
        <businessProcess>Product Opportunities</businessProcess>
        <label>Delivery Partnership</label>
    </recordTypes>
    <recordTypes>
        <fullName>MSA_Opportunity</fullName>
        <active>true</active>
        <businessProcess>MSA Opportunities</businessProcess>
        <label>MSA Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Product Opportunities</businessProcess>
        <label>Product Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Services Opportunities</businessProcess>
        <label>Services Opportunity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_Date_is_later_than_the_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Start_Date__c)), 
NOT(ISBLANK(End_Date__c)), 
Start_Date__c &gt;=  End_Date__c
)</errorConditionFormula>
        <errorMessage>End Date should be later than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lost_Reason_Other_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Lost_Reason__c, &quot;Other&quot;),
  ISBLANK(Lost_Reason_Other__c)
)</errorConditionFormula>
        <errorDisplayField>Lost_Reason_Other__c</errorDisplayField>
        <errorMessage>Please indicate the other reason this Opportunity was Closed Lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Opp_Must_Have_1_Prod_on_Close</fullName>
        <active>true</active>
        <description>Closing a Product Opportunity must have at least 1 Product</description>
        <errorConditionFormula>AND(
  RecordType.DeveloperName = &apos;Product_Opportunity&apos;,
  ISCHANGED(IsClosed),
  IsClosed,
  IsWon,
  NOT(HasOpportunityLineItem)
)</errorConditionFormula>
        <errorMessage>You must add at least one Product to this Opportunity in order to mark it as Closed Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Opp_Only_Closed_Won_By_Process</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( StageName , &apos;Closed Won&apos; ),
 IF( Is_Closed_Through_Process__c == false, true, false) 
 )</errorConditionFormula>
        <errorMessage>Service opportunities can only be closed won through custom process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subscription_Start_End_Date_on_ClosedWon</fullName>
        <active>true</active>
        <description>Subscription Start and End Date are required on Closed Won</description>
        <errorConditionFormula>AND(
  RecordType.DeveloperName = &apos;Product_Opportunity&apos;,
  ISPICKVAL(StageName, &quot;Closed Won&quot;),
  OR(
    ISBLANK(Subscription_Start_Date__c),
    ISBLANK(Subscription_End_Date__c)
  )
)</errorConditionFormula>
        <errorMessage>Subscription Start Date and End Date are required to Closed Won an Opportunity</errorMessage>
    </validationRules>
</CustomObject>